--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,33 +10,33 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo-google-fonts/ubuntu": "^0.1.0",
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/native": "^5.5.0",
-    "@react-navigation/stack": "^5.4.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
-    "expo": "~37.0.3",
-    "expo-constants": "~9.0.0",
-    "expo-font": "~8.1.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "0.26.1",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-svg": "11.0.1",
-    "react-native-web": "~0.11.7",
-    "expo-location": "~8.1.0",
-    "expo-mail-composer": "~8.1.0",
-    "mem": ">=4.0.0"
+    "expo": "^41.0.1",
+    "expo-constants": "^10.1.3",
+    "expo-font": "^9.1.0",
+    "expo-location": "^12.0.4",
+    "expo-mail-composer": "^10.1.2",
+    "mem": "^8.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-native": "^0.64.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "^0.28.0",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.3.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "^0.16.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "@babel/core": "^7.14.3",
+    "@types/react": "^17.0.10",
+    "@types/react-native": "^0.64.10",
+    "babel-preset-expo": "^8.3.0",
+    "typescript": "^4.3.2"
   },
   "private": true
 }
